# AndroidEmulatorWatcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
src/emulator_watcher/: __init__.py  adb_service.py  app.py  models.py  ssh_client.py  ssh_config.py
src/emulator_watcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/emulator_watcher/widgets/: __init__.py  emulator_panel.py
